feat: update d3z40 profile

--- a/community/0d3z40.md
+++ b/community/0d3z40.md
@@ -72,6 +72,6 @@ Atualmente sou sou desenvolvedor fullstack, com foco em Java e Angular. Apaixona
 ##
 ### 📲 Você pode me encontrar em:
 
-![GitHub](https://img.shields.io/badge/github-%23181717?style=for-the-badge&logo=github&logoColor=white&link=https%3A%2F%2Fgithub.com%2Fd3z40)
+[![GitHub](https://img.shields.io/badge/github-%23181717?style=for-the-badge&logo=github&logoColor=white)](https://github.com/d3z40)
 
 [![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)](https://br.linkedin.com/in/pereira-andre)
